lms errors fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,25 +15,25 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="logo" href="./index.html">
-          <span class="accent-logo-part">WEB</span>
+      <nav class="list">
+        <a class="logo link" href="./index.html">
+          WEB
           <span class="noaccent-logo-part">STUDIO</span>
         </a>
-        <ul>
-          <li>
+        <ul class="menu-list">
+          <li class="list">
             <a class="navigation" href="./index.html">Studio</a>
           </li>
-          <li>
+          <li class="list">
             <a class="navigation" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
+          <li class="list">
             <a class="navigation" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="address">
-        <ul>
+      <address>
+        <ul class="list">
           <li>
             <a class="address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -46,125 +46,134 @@
       </address>
     </header>
     <main>
-      <ui>
-        <li>
-          <button type="button" class="portfolio-navigation-button">All</button>
-        </li>
-        <li>
-          <button type="button" class="portfolio-navigation-button">
-            Web Site
-          </button>
-        </li>
-        <li>
-          <button type="button" class="portfolio-navigation-button">App</button>
-        </li>
-        <li>
-          <button type="button" class="portfolio-navigation-button">
-            Design
-          </button>
-        </li>
-        <li>
-          <button type="button" class="portfolio-navigation-button">
-            Marketing
-          </button>
-        </li>
-      </ui>
-      <ul>
-        <li>
-          <img
-            src="./images/portfolio-sample1.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height=""
-          />
-          <h2 class="portfolio-sample-title">Banking App Interface Concept</h2>
-          <p class="portfolio-sample-description">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample2.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height=""
-          />
-          <h2 class="portfolio-sample-title">Cashless Payment</h2>
-          <p class="portfolio-sample-description">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample3.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height="300"
-          />
-          <h2 class="portfolio-sample-title">Meditaion App</h2>
-          <p class="portfolio-sample-description">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample4.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height="300"
-          />
-          <h2 class="portfolio-sample-title">Taxi Service</h2>
-          <p class="portfolio-sample-description">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample5.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height="300"
-          />
-          <h2 class="portfolio-sample-title">Screen Illustrations</h2>
-          <p class="portfolio-sample-description">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample6.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height="300"
-          />
-          <h2 class="portfolio-sample-title">Online Courses</h2>
-          <p class="portfolio-sample-description">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample7.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height="300"
-          />
-          <h2 class="portfolio-sample-title">Instagram Stories Concept</h2>
-          <p class="portfolio-sample-description">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample8.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height="300"
-          />
-          <h2 class="portfolio-sample-title">Organic Food</h2>
-          <p class="portfolio-sample-description">Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio-sample9.jpg"
-            alt="Portfolio sample"
-            width="360"
-            height="300"
-          />
-          <h2 class="portfolio-sample-title">Fresh Coffee</h2>
-          <p class="portfolio-sample-description">Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <h1 class="section-header" hidden>header</h1>
+        <ul class="list">
+          <li>
+            <button type="button" class="portfolio-navigation-button">
+              All
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-navigation-button">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-navigation-button">
+              App
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-navigation-button">
+              Design
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-navigation-button">
+              Marketing
+            </button>
+          </li>
+        </ul>
+        <ul class="list">
+          <li>
+            <a href="" class="link"><img
+              src="./images/portfolio-sample1.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">
+              Banking App Interface Concept
+            </h2>
+            <p class="portfolio-sample-description">App</p></a>
+          </li>
+          <li>
+            <a href="" class="link"><img
+              src="./images/portfolio-sample2.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Cashless Payment</h2>
+            <p class="portfolio-sample-description">Marketing</p></a>
+          </li>
+          <li>
+             <a href="" class="link"><img
+              src="./images/portfolio-sample3.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Meditaion App</h2>
+            <p class="portfolio-sample-description">App</p></a>
+          </li>
+          <li>
+             <a href="" class="link"><img
+              src="./images/portfolio-sample4.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Taxi Service</h2>
+            <p class="portfolio-sample-description">Marketing</p></a>
+          </li>
+          <li>
+             <a href="" class="link"><img
+              src="./images/portfolio-sample5.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Screen Illustrations</h2>
+            <p class="portfolio-sample-description">Design</p></a>
+          </li>
+          <li>
+             <a href="" class="link"><img
+              src="./images/portfolio-sample6.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Online Courses</h2>
+            <p class="portfolio-sample-description">Marketing</p></a>
+          </li>
+          <li>
+             <a href="" class="link"><img
+              src="./images/portfolio-sample7.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Instagram Stories Concept</h2>
+            <p class="portfolio-sample-description">Design</p></a>
+          </li>
+          <li>
+             <a href="" class="link"><img
+              src="./images/portfolio-sample8.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Organic Food</h2>
+            <p class="portfolio-sample-description">Web Site</p></a>
+          </li>
+          <li>
+             <a href="" class="link"><img
+              src="./images/portfolio-sample9.jpg"
+              alt="Portfolio sample"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio-sample-title">Fresh Coffee</h2>
+            <p class="portfolio-sample-description">Web Site</p></a>
+          </li>
+        </ul>
+      </sion>
     </main>
     <footer class="footer">
       <a class="logo" href="./index.html">
-        <span class="accent-logo-part">WEB</span>
+        WEB
         <span class="noaccent-logo-footer-part">STUDIO</span>
       </a>
       <p>
