--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="logo" href="./index.html">
-          <span class="accent-logo-part">WEB</span>
+      <nav class="list">
+        <a class="logo link" href="./index.html">
+          WEB
           <span class="noaccent-logo-part">STUDIO</span>
         </a>
-        <ul>
-          <li>
+        <ul class="menu-list">
+          <li class="list">
             <a class="navigation" href="./index.html">Studio</a>
           </li>
-          <li>
+          <li class="list">
             <a class="navigation" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
+          <li class="list">
             <a class="navigation" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a class="address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -46,13 +46,13 @@
       </address>
     </header>
     <main>
-      <section class="title-section">
-        <h1>Effective Solutions for Your Business</h1>
+      <section>
+        <h1 class="title-section">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
-        <h2></h2>
-        <ul>
+        <h2 class="section-header"></h2>
+        <ul class="list">
           <li>
             <h3 class="advantage-header">Strategy</h3>
             <p class="advantage-paragraph">
@@ -85,7 +85,7 @@
       </section>
       <section>
         <h2 class="section-header">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/img-1.jpg"
@@ -114,7 +114,7 @@
       </section>
       <section>
         <h2 class="section-header">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/team-member-1.jpg"
@@ -160,7 +160,7 @@
     </main>
     <footer class="footer">
       <a class="logo" href="./index.html">
-        <span class="accent-logo-part">WEB</span>
+        WEB
         <span class="noaccent-logo-footer-part">STUDIO</span>
       </a>
       <p>
