--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,12 @@
       <address>
         <ul class="list">
           <li>
-            <a class="address" href="mailto:info@devstudio.com"
+            <a class="address link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="address" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
