logo register changed

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   </head>
   <body>
     <header>
-      <nav class="list">
+      <nav>
         <a class="logo link" href="./index.html">
           WEB
-          <span class="noaccent-logo-part">STUDIO</span>
+          <span class="noaccent-logo-part">Studio</span>
         </a>
-        <ul class="menu-list">
-          <li class="list">
+        <ul class="list">
+          <li>
             <a class="navigation" href="./index.html">Studio</a>
           </li>
-          <li class="list">
+          <li>
             <a class="navigation" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="list">
+          <li>
             <a class="navigation" href="">Contacts</a>
           </li>
         </ul>
