--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <a class="logo link" href="./index.html">
-          WEB
+          Web
           <span class="noaccent-logo-part">Studio</span>
         </a>
         <ul class="list">
@@ -161,9 +161,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">
-        WEB
-        <span class="noaccent-logo-footer-part">STUDIO</span>
+      <a class="logo link" href="./index.html">
+        Web
+        <span class="noaccent-logo-part">Studio</span>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
