--- a/portfolio.html
+++ b/portfolio.html
@@ -15,19 +15,19 @@
   </head>
   <body>
     <header>
-      <nav class="list">
+      <nav>
         <a class="logo link" href="./index.html">
-          WEB
-          <span class="noaccent-logo-part">STUDIO</span>
+          Web
+          <span class="noaccent-logo-part">Studio</span>
         </a>
-        <ul class="menu-list">
-          <li class="list">
+        <ul class="list">
+          <li>
             <a class="navigation" href="./index.html">Studio</a>
           </li>
-          <li class="list">
+          <li>
             <a class="navigation" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="list">
+          <li>
             <a class="navigation" href="">Contacts</a>
           </li>
         </ul>
@@ -172,9 +172,9 @@
       </sion>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">
-        WEB
-        <span class="noaccent-logo-footer-part">STUDIO</span>
+      <a class="logo link" href="./index.html">
+        Web
+        <span class="noaccent-logo-part">Studio</span>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
