--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="list">
           <li>
-            <a class="navigation" href="./index.html">Studio</a>
+            <a class="navigation link" href="./index.html">Studio</a>
           </li>
           <li>
             <a class="navigation" href="./portfolio.html">Portfolio</a>
@@ -32,23 +32,21 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
-            <a class="address link" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="address link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <section class="first-title-section">
         <h1 class="title-section">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
@@ -163,7 +161,7 @@
     <footer class="footer">
       <a class="logo link" href="./index.html">
         Web
-        <span class="noaccent-logo-part">Studio</span>
+        <span class="noaccent-logo-footer-part">Studio</span>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
