--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,9 @@
             >
           </li>
           <li>
-            <a class="address link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -77,104 +79,122 @@
         </ul>
         <ul class="list">
           <li>
-            <a href="" class="link"><img
-              src="./images/portfolio-sample1.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">
-              Banking App Interface Concept
-            </h2>
-            <p class="portfolio-sample-description">App</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample1.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">
+                Banking App Interface Concept
+              </h2>
+              <p class="portfolio-sample-description">App</p></a
+            >
           </li>
           <li>
-            <a href="" class="link"><img
-              src="./images/portfolio-sample2.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Cashless Payment</h2>
-            <p class="portfolio-sample-description">Marketing</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample2.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Cashless Payment</h2>
+              <p class="portfolio-sample-description">Marketing</p></a
+            >
           </li>
           <li>
-             <a href="" class="link"><img
-              src="./images/portfolio-sample3.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Meditaion App</h2>
-            <p class="portfolio-sample-description">App</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample3.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Meditation App</h2>
+              <p class="portfolio-sample-description">App</p></a
+            >
           </li>
           <li>
-             <a href="" class="link"><img
-              src="./images/portfolio-sample4.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Taxi Service</h2>
-            <p class="portfolio-sample-description">Marketing</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample4.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Taxi Service</h2>
+              <p class="portfolio-sample-description">Marketing</p></a
+            >
           </li>
           <li>
-             <a href="" class="link"><img
-              src="./images/portfolio-sample5.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Screen Illustrations</h2>
-            <p class="portfolio-sample-description">Design</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample5.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Screen Illustrations</h2>
+              <p class="portfolio-sample-description">Design</p></a
+            >
           </li>
           <li>
-             <a href="" class="link"><img
-              src="./images/portfolio-sample6.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Online Courses</h2>
-            <p class="portfolio-sample-description">Marketing</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample6.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Online Courses</h2>
+              <p class="portfolio-sample-description">Marketing</p></a
+            >
           </li>
           <li>
-             <a href="" class="link"><img
-              src="./images/portfolio-sample7.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Instagram Stories Concept</h2>
-            <p class="portfolio-sample-description">Design</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample7.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Instagram Stories Concept</h2>
+              <p class="portfolio-sample-description">Design</p></a
+            >
           </li>
           <li>
-             <a href="" class="link"><img
-              src="./images/portfolio-sample8.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Organic Food</h2>
-            <p class="portfolio-sample-description">Web Site</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample8.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Organic Food</h2>
+              <p class="portfolio-sample-description">Web Site</p></a
+            >
           </li>
           <li>
-             <a href="" class="link"><img
-              src="./images/portfolio-sample9.jpg"
-              alt="Portfolio sample"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-sample-title">Fresh Coffee</h2>
-            <p class="portfolio-sample-description">Web Site</p></a>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio-sample9.jpg"
+                alt="Portfolio sample"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-sample-title">Fresh Coffee</h2>
+              <p class="portfolio-sample-description">Web Site</p></a
+            >
           </li>
         </ul>
-      </sion>
+      </section>
     </main>
     <footer class="footer">
       <a class="logo link" href="./index.html">
         Web
-        <span class="noaccent-logo-part">Studio</span>
+        <span class="noaccent-logo-footer-part">Studio</span>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
