--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <a class="navigation link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="navigation" href="./portfolio.html">Portfolio</a>
+            <a class="navigation link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="navigation" href="">Contacts</a>
+            <a class="navigation link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
