--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="last-section">
         <h2 class="section-header">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-members-list">
             <img
               src="./images/team-member-1.jpg"
               alt="Team member"
@@ -125,7 +125,7 @@
             <h3 class="team-members-name">Mark Guerrero</h3>
             <p class="team-members-description">Product Designer</p>
           </li>
-          <li>
+          <li class="team-members-list">
             <img
               src="./images/team-member-2.jpg"
               alt="Team member"
@@ -135,7 +135,7 @@
             <h3 class="team-members-name">Tom Ford</h3>
             <p class="team-members-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-members-list">
             <img
               src="./images/team-member-3.jpg"
               alt="Team member"
@@ -145,7 +145,7 @@
             <h3 class="team-members-name">Camila Garcia</h3>
             <p class="team-members-description">Marketing</p>
           </li>
-          <li>
+          <li class="team-members-list">
             <img
               src="./images/team-member-4.jpg"
               alt="Team member"
@@ -163,7 +163,7 @@
         Web
         <span class="noaccent-logo-footer-part">Studio</span>
       </a>
-      <p>
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
